rock-paper-scissors:

--- a/root/games/rock-paper-scissors.html
+++ b/root/games/rock-paper-scissors.html
@@ -27,6 +27,9 @@
       </a>
     </nav>
     <article>
+      <div id="result" class="result-modal hidden">
+        <h2></h2>
+      </div>
       <div class="container game1">
         <h2 class="inner-title">Rock, paper, scissors</h2>
         <div class="game1__score">
